# papers2dataset

./: .env.example  .gitignore  README.md  dev.ipynb  install.py  pyproject.toml
papers2dataset/: __main__.py  bfs_queue.py  export_csv.py  extractor.py  models.py  openalex_client.py  project.py
projects/cpas/: bfs_queue.json  prompt.txt  schema.json
projects/organ_cryo_data_central/: metadata.json  prompt.txt  relevance_prompt.txt  schema.json  search_query.txt
skill/: SKILL.md
skill/references/: OPENALEX.md  WORKFLOW.md
skill/scripts/: bfs_queue.py  download_pdf.py  search_openalex.py
